/v1/latest/{clusterName}/{applicationName}/
